--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Mahendran B - Resume</title>
 </head>
 <body>
-    <h1>Mahendran B - Resume</h1>
-    <p><a href="Mahendran%20B.pdf" target="_blank">Click here to view my resume</a></p>
+    <iframe src="Mahendran%20B.pdf" width="100%" height="100%" style="position: absolute; top: 0; left: 0; width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
