--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahendran B - Resume</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="Mahendran%20B.pdf" width="100%" height="100%" style="position: absolute; top: 0; left: 0; width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="Mahendran%20B.pdf"></iframe>
 </body>
 </html>
