--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
             padding: 0;
             height: 100%;
             width: 100%;
-            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
             background: #f4f4f4;
         }
-        object {
+        iframe {
             width: 100vw;
             height: 100vh;
+            transform: scale(1);
+            transform-origin: top left;
         }
     </style>
 </head>
 <body>
-    <object data="Mahendran%20B.pdf" type="application/pdf">
-        <p>Your browser does not support PDFs. <a href="Mahendran%20B.pdf">Download the PDF</a>.</p>
-    </object>
+    <iframe src="Mahendran%20B.pdf#zoom=FitPage" type="application/pdf"></iframe>
 </body>
 </html>
